# test_fastapi

./: .env  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 979c148da4aa_create_uuid_extension.py  c255a00ed374_create_user_model.py  ea07a7a27329_create_user_model.py  f0ecde9b331b_add_users.py
app/: crud.py  database.py  main.py
app/models/: user.py
app/schemas/: user.py
schemas/: user.py
tests/: conftest.py  test_main.py
tests/mock_data/: users_response.json
