[tool.poetry]
name = "test_for_lesia"
version = "0.1.0"
description = ""
authors = ["lesyaolexs <lesyaolexs852@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
databases = {extras = ["asyncpg"], version = "^0.5.5"}
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
mypy = "^0.960"
pytest-postgresql = "^4.1.1"
pytest-mock = "^3.7.0"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
plugins = "pydantic.mypy"
